Migrate from Ant to Maven multi-module build with Java 11 support
Restructure jpf-symbc from a monolithic Ant-based build to a Maven
multi-module project (5 modules: annotations, main, classes, tests,
examples). Migrate from yannicnoller's jpf-core fork (Java 8/Ant) to
the official jpf-core (Java 11/Gradle). Move 20 solver JARs not
available on Maven Central to a local repo/ directory with proper
Maven coordinates.

Closes #1

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>